# coin-smith

./: README.md  cli.sh  demo.md  setup.sh  web.sh
app/: index.html  package-lock.json
app/src/: App.jsx  styles.css
app/src/components/: InputsTable.jsx  JsonInput.jsx  OutputsTable.jsx  PsbtViewer.jsx  SummaryPanel.jsx  TxDiagram.jsx  WarningsPanel.jsx
coinsmith/: Cargo.toml
coinsmith/src/: api.rs  lib.rs  main.rs
coinsmith/src/coin_selection/: fee_estimator.rs  mod.rs  utxo_consolidation.rs
coinsmith/src/coin_selection/strategies/: branch_and_bound.rs  greedy.rs  knapsack.rs  mod.rs
coinsmith/src/input_validation/: mod.rs  types.rs  utils.rs
coinsmith/src/tests/: coin_selection_tests.rs  fee_change_tests.rs  mod.rs  psbt_tests.rs
coinsmith/src/unsigned_tx_builder/: mod.rs
